# MediaCollection

./: .gitignore  CMakeLists.txt  README.md
drivers/: CMakeLists.txt
drivers/music/: CMakeLists.txt
drivers/music/include/: music.h  tag.h
drivers/music/src/: music.cpp  tag.cpp
include/: config.h  download_manager.h  driver.h  mainwindow.h  optionsmenu.h  rssmanager.h  scanner.h  torrentmanager.h
src/: config.cpp  download_manager.cpp  driver.cpp  main.cpp  mainwindow.cpp  optionsmenu.cpp  rssmanager.cpp  scanner.cpp  torrentmanager.cpp
